--- a/ind_rep.qmd
+++ b/ind_rep.qmd
@@ -11,12 +11,11 @@ Among the multiple systems of transportation, bike-share systems have become a c
 
 Our study addresses the overarching question:
 
-\
-“*Among time, location, and other rider characteristics, which variables are the most important drivers of Citi Bike trip volume in Manhattan?*”
+> *Among time, location, and other rider characteristics, which variables are the most important drivers of Citi Bike trip volume in Manhattan?*
 
 As an initial step toward addressing the broader question, this analysis examines a related sub-question:
 
-**“How do time of day and day of the week affect Citi Bike ridership?”**
+> **“How do time of day and day of the week affect Citi Bike ridership?”**
 
 Temporal factors are widely recognized as strong predictors of transportation demand, especially in commuted-focused settings. By isolating Manhattan and analyzing hourly and weekly patterns, this study aims to measure the magnitude and consistency of time-based influences, highlighting their significance compared to other potential determinants.
 
@@ -550,10 +549,18 @@ kable(
 
 ### 4.3 Regression Findings
 
-## 5. Discussion
+------------------------------------------------------------------------
 
-Across cities, bike-share usage typically follows a stable temporal structure, with clear morning and evening peaks during weekdays reflecting commuter behavior, and flatter, midday peaks during weekends indicating leisure-oriented travel. These temporal cycles persist across seasons, suggesting that time-based variables provide a robust baseline for understating ridership variation.
+## 5. Discussion
 
 ------------------------------------------------------------------------
 
-## 6. Conclusion
+## 6. Limitations
+
+The focus of this study is Manhattan exclusively without generalizing the findings to other boroughs with different land-use patterns. Additionally, the purpose of each individual trip cannot be derived from the Citi Bike data, requiring us to infer commuting and leisure behavior. While aggregating trips to hourly and daily counts is necessary for visualization and modeling, it can obscure other detailed temporal dynamics that are present in individual trip records. Relying on a single year of data ultimately limits the ability to assess long-term trends or any structural changes in Citi Bike usage over time. While the research and analysis are appropriate for this study, our potential future work could examine such factors.
+
+------------------------------------------------------------------------
+
+## 7. Conclusion
+
+Across cities, bike-share usage typically follows a stable temporal structure. Weekday ridership is driven by routine commuting patterns, while weekend usage reflects leisure patterns with lower, more discretionary demand. These results demonstrate that time-based variables are essential for understanding and modeling ridership variation. 
